<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bras</string>
    <string name="user_info">User Information</string>
    <string name="action_settings">Settings</string>
    <string name="auto_login">Auto login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="save_password">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="student_id">Student ID</string>
    
    <string name="user_name">Username: </string>
	<string name="userip">IP address: </string>
	<string name="useripv6">IPV6 address: </string>
	<string name="mac">MAC address: </string>
	<string name="acctstarttime">Logon from: </string>
	<string name="fullname">Name: </string>
	<string name="service_name">Service type: </string>
	<string name="area_name">Location: </string>
	<string name="payamount">Balance: </string>
	
	<string name="hour">hours </string>
	<string name="minute">minutes </string>
	<string name="second">seconds </string>
	
	<string name="empty_username_or_password">Username or password could not be empty.</string>
	<string name="wrong_username_or_password">Username or password is incorrect.</string>
	
	<string name="logout_dialog_title">Logout Confirm</string>
	<string name="logout_dialog_message">Are you sure you want to logout Bras?</string>
	<string name="dialog_positive">YES</string>
	<string name="dialog_negative">NO</string>
	
	<string name="progress_dialog_message_logon">Logging on...</string>
	<string name="progress_dialog_message_logoff">Logging off...</string>
	
	<string name="cannot_establish_connection_to_server">Cannot establish a connection to server.</string>
	
	<string name="logon_at_another_area">Your account has been logged on at another place.</string>
	<string name="at">at</string>
	<string name="logoff_and_logon">Do you want to logoff and then logon on this machine?</string>
</resources>
