<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <CheckBox
	android:id="@+id/auto_login_checkbox"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/auto_login"
	android:layout_alignTop="@+id/save_password_checkbox"
	android:layout_alignRight="@+id/logon_button" />
	<Button
		android:id="@+id/logon_button"
		android:layout_width="210dp"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:layout_below="@+id/save_password_checkbox"
		android:layout_alignLeft="@+id/save_password_checkbox" />
	<CheckBox
		android:id="@+id/save_password_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/save_password"
		android:layout_below="@+id/password_text"
		android:layout_alignLeft="@+id/password_text"
		android:checked="true" />
	<EditText
		android:id="@+id/password_text"
		android:layout_width="210dp"
		android:layout_height="46dp"
		android:textSize="18sp"
		android:inputType="textPassword"
		android:hint="@string/password"
		android:layout_below="@+id/username_text"
		android:layout_alignLeft="@+id/username_text" />
	<AutoCompleteTextView
		android:id="@+id/username_text"
		android:layout_width="210dp"
		android:layout_height="46dp"
		android:textSize="18sp"
		android:textColor="@android:color/black"
		android:hint="@string/student_id"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true" />

</RelativeLayout>

